// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom Pusher (invalid) 1`] = `
"msg:Update branch-a to output generated at <sha>
tree:8bf87c66655949e66937b11593cc4ae732d1f610
author:s0 <s0@users.noreply.github.com>"
`;

exports[`Custom Pusher 1`] = `
"msg:Update branch-a to output generated at <sha>
tree:8bf87c66655949e66937b11593cc4ae732d1f610
author:Alice Bob <bob@examle.com>"
`;

exports[`No Pusher or Actor 1`] = `
"msg:Update branch-a to output generated at <sha>
tree:8bf87c66655949e66937b11593cc4ae732d1f610
author:Git Publish Subdirectory <nobody@nowhere>"
`;
